[ref] Use ArrayList instead of LinkedList