@@ -15,12 +15,10 @@ import java.awt.event.ItemEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
-import java.util.ArrayDeque;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Deque;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.regex.Pattern;
 
@@ -99,7 +97,7 @@ public class ClientSelectionDialog {
 	private JTextField saveNameField;
 	private JTextField saveDescriptionField;
 
-	private LinkedList<ComplexGroup> complexElements;
+	private List<ComplexGroup> complexElements;
 
 	private SelectionManager manager;
 	private SavedSearchesDialog savedSearchesDialog;
@@ -115,7 +113,7 @@ public class ClientSelectionDialog {
 	public ClientSelectionDialog(SavedSearchesDialog savedSearchesDialog) {
 		this.savedSearchesDialog = savedSearchesDialog;
 		manager = new SelectionManager();
-		complexElements = new LinkedList<>();
+		complexElements = new ArrayList<>();
 		init();
 		JPanel panel = initComponents();
 		Utils.addKeyBindingToJComponent(panel, KeyStroke.getKeyStroke(KeyEvent.VK_F5, 0), this::reload);
@@ -215,7 +213,7 @@ public class ClientSelectionDialog {
 		newElementBox.addItem(Configed.getResourceValue("ClientSelectionDialog.swauditName"));
 
 		// hardware
-		List<String> hardwareList = new LinkedList<>(manager.getBackend().getLocalizedHardwareList().keySet());
+		List<String> hardwareList = new ArrayList<>(manager.getBackend().getLocalizedHardwareList().keySet());
 		Collections.sort(hardwareList);
 		for (String hardware : hardwareList) {
 			newElementBox.addItem(hardware);
@@ -473,7 +471,7 @@ public class ClientSelectionDialog {
 		result.openParenthesis = createParenthesisCheckBox("(", true);
 		result.openParenthesis.setSelected(false);
 
-		result.groupList = new LinkedList<>();
+		result.groupList = new ArrayList<>();
 		return result;
 	}
 
@@ -627,7 +625,7 @@ public class ClientSelectionDialog {
 		contentPane.repaint();
 	}
 
-	private static void showParenthesesForGroup(Deque<SimpleGroup> groups) {
+	private static void showParenthesesForGroup(List<SimpleGroup> groups) {
 		boolean inOr = false;
 		for (SimpleGroup group : groups) {
 			group.openParenthesis.setVisible(false);
@@ -648,7 +646,7 @@ public class ClientSelectionDialog {
 		}
 
 		if (inOr) {
-			SimpleGroup group = groups.getLast();
+			SimpleGroup group = groups.get(groups.size() - 1);
 			group.closeParenthesis.setVisible(true);
 		}
 	}
@@ -662,16 +660,16 @@ public class ClientSelectionDialog {
 	}
 
 	private void repairParentheses() {
-		Deque<ComplexGroup> stack = new ArrayDeque<>();
+		List<ComplexGroup> stack = new ArrayList<>();
 		for (ComplexGroup complex : complexElements) {
 			if (complex.openParenthesis.isSelected() && complex.closeParenthesis.isSelected()) {
 				complex.openParenthesis.setSelected(false);
 				complex.closeParenthesis.setSelected(false);
 			} else if (complex.openParenthesis.isSelected()) {
-				stack.push(complex);
+				stack.add(complex);
 			} else if (complex.closeParenthesis.isSelected()) {
 				if (!stack.isEmpty()) {
-					stack.pop();
+					stack.remove(stack.size() - 1);
 				} else {
 					complex.closeParenthesis.setSelected(false);
 				}
@@ -766,7 +764,7 @@ public class ClientSelectionDialog {
 			OperationWithStatus groupStatus;
 			groupStatus = getInformation(complex);
 
-			List<OperationWithStatus> childList = new LinkedList<>();
+			List<OperationWithStatus> childList = new ArrayList<>();
 
 			for (SimpleGroup group : complex.groupList) {
 				AbstractSelectOperation op = getOperation(group);
@@ -931,7 +929,7 @@ public class ClientSelectionDialog {
 		private JCheckBox negateButton;
 		private JLabel topLabel;
 		private JCheckBox connectionType;
-		private Deque<SimpleGroup> groupList;
+		private List<SimpleGroup> groupList;
 		private JCheckBox openParenthesis;
 		private JCheckBox closeParenthesis;
 
